<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <!-- PreviewView for the camera preview -->
    <androidx.camera.view.PreviewView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cameraPreview"/>

    <ImageButton
        android:id="@+id/helpBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="moveToHelp"
        android:background="@null"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/help_round_button_icon_icons_com_72706"
        app:tint="#fff"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/capture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:src="@drawable/_00"
        android:scaleType="centerCrop"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:tint="#fff"
        android:contentDescription="@string/image_description" />

    <ImageButton
        android:id="@+id/toggleFlash"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/image_description"
        android:src="@drawable/baseline_flash_on_24"
        app:tint="#fff"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/flipCamera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/toggleFlash"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/image_description"
        android:onClick="flip"
        android:src="@drawable/round_flip_camera_android_24"
        app:tint="#fff"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/rankingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:onClick="moveToRanking"
        android:text="@string/ranking_title"
        android:textColor="#37474F" />

    <EditText
        android:id="@+id/x_edit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:digits="123456789"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="1"
        android:text="@string/default_column"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor" />

    <EditText
        android:id="@+id/y_edit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/x_edit"
        android:inputType="number"
        android:digits="123456789"
        android:gravity="center"
        android:maxLength="1"
        android:text="@string/default_row"
        tools:ignore="LabelFor"
        android:autofillHints="" />

    <Button
        android:id="@+id/sync_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/x_edit"
        android:onClick="sync"
        android:text="@string/sync_button_text"
        android:textColor="#37474F"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>
